fix(orchestrator): transition log streaming to virtual threads and close response on disconnect